[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://inspector.engineering.nyu.edu/"
Source = "https://github.com/nyu-mlab/inspector-core-library/"
Tracker = "https://github.com/nyu-mlab/inspector-core-library/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "libinspector",
    "libinspector.*"
]

[tool.setuptools.package-data]
libinspector = [
    "data/*.csv",
    "data/*.txt"
]

[project]
name = "libinspector"
dynamic = ["version"]
description = "Library for core functionalities of IoT Inspector. This captures packets and stores it in a database for real-time network traffic analysis."
readme = "README.md"
authors = [
    { name = "Danny Huang", email = "dhuang@nyu.edu" },
    { name = "Andrew Quijano", email = "andrew.quijano@nyu.edu" }
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "setuptools==78.1.1",
    "netaddr==1.3.0",
    "psutil==7.0.0",
    "scapy==2.6.1",
    "requests==2.32.4",
    "zeroconf==0.146.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
