[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "libinspector",
    "libinspector.*"
]

[tool.setuptools.package-data]
libinspector = [
    "data/oui/*.csv",
    "data/geolite/*.mmdb",
    "data/trackers/*.json",
]

[project]
name = "libinspector"
dynamic = ["version"]
description = "Library for core functionalities of IoT Inspector. This captures packets and stores it in a database for real-time network traffic analysis."
readme = "README.md"
authors = [
    { name = "Danny Huang", email = "dhuang@nyu.edu" },
    { name = "Andrew Quijano", email = "andrew.quijano@nyu.edu" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "platformdirs==4.9.2",
    "netaddr==1.3.0",
    "psutil==7.2.2",
    "scapy==2.7.0",
    "requests==2.32.5",
    "zeroconf==0.148.0"
#    "geoip2==5.1.0"
]
classifiers = [
    "Topic :: System :: Networking :: Monitoring",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natrual Language :: English"
]

[project.scripts]
oui_parser = "libinspector.oui_parser:main"

[project.urls]
Homepage = "https://inspector.engineering.nyu.edu/"
Source = "https://github.com/nyu-mlab/inspector-core-library"
Tracker = "https://github.com/nyu-mlab/inspector-core-library/issues"
Documentation = "https://github.com/nyu-mlab/iot-inspector-client/wiki"
Download = "https://github.com/nyu-mlab/inspector-core-library/releases/latest"